--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "highlight.js": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
