--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.13.2-slim
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
     libglib2.0-0 \
+    wkhtmltopdf \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
